# string_srvs

./: CMakeLists.txt  package.xml
scripts/: image_client_test.py  image_server.py
srv/: GetCompressedImage.srv  GetImage.srv
